<resources>
    <string name="app_name">BlackFriday</string>
    <string name="app_name_ud">中华联合</string>
    <string name="app_name_picc">易定损企业版</string>
    <string name="hint_input_account">请输入工号</string>
    <string name="hint_input_pwd">请输入密码</string>
    <string name="hint_input_car">请输入车牌号</string>
    <string name="hint_input_report">请输入报案号</string>
    <string name="hint_input_phone">三者车被保险人手机号码</string>
    <string name="hint_estimate_input_car">车牌号</string>
    <string name="hint_estimate_input_vin">VIN码</string>
    <string name="hint_estimate_input_report">报案号</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="no_id_should_register">还没有账号，点击这里注册</string>
    <string name="btn_local_photo">离线拍照</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="list_empty">暂无信息</string>
    <string name="check_my_all_order">查看全部订单</string>
    <string name="my_order">我的订单</string>
    <string name="my_req_login">登录 / 注册</string>
    <string name="order_not_pay">待付款</string>
    <string name="order_not_receipt">待收货</string>
    <string name="order_not_comment">待评价</string>
    <string name="keyfob_signal_strength_weak">Weak Signal</string>
    <string name="keyfob_signal_strength_average">Average Signal</string>
    <string name="keyfob_signal_strength_good">Good Signal</string>
    <string name="keyfob_signal_strength_unknown">Unknown Signal</string>
    <string name="device_has_disconnected">DEVICE HAS DISCONNECTED</string>
    <string-array name="properties_array">
        <item>Broadcast</item>
        <item>Read</item>
        <item>Write no response</item>
        <item>Write</item>
        <item>Notify</item>
        <item>Indicate</item>
        <item>Signed write</item>
        <item>Extended props</item>
    </string-array>
    <string name="unspecified">Unspecified</string>
    <string name="ibeacon">iBeacon</string>
    <string name="eddystone">Eddystone</string>
    <string name="alt_beacon">AltBeacon</string>
    <string name="unknown">Unknown</string>
    <string name="hex">Hex</string>
    <string name="ascii">ASCII</string>
    <string name="decimal">Decimal</string>
    <string name="unknown_service">Unknown service</string>
    <string name="debug_mode_connection_failed_snackbar">"Failed connecting to %1$s"</string>
    <string name="mainlist_title">服务记录仪</string>
    <string name="login_logo">BlackFriday</string>
    <string name="bluetooth_connect_device_title">连接设备</string>
    <string name="bluetooth_device_search">搜索中,请稍后</string>
    <string name="bluetooth_notice_longpress_message">请长按按钮,直到指示灯出现红灯闪烁,进入下一步</string>
    <string name="bluetooth_connect_next">下一步</string>
    <string name="mainlist_empty_connect_device_text">没有连接设备</string>
    <string name="mainlist_add_new_devices">添加新设备</string>
    <string name="bluetooth_detail_back">返回</string>
    <string name="bluetooth_connect_cancel">取消</string>
    <string name="bluetooth_search_result_text">找到以下设备</string>
    <string name="bluetooth_device_details_title">设备详情</string>
    <string name="bluetooth_device_name">设备名称:</string>
    <string name="bluetooth_device_id">设备ID:</string>
    <string name="bluetooth_detail_device_name">设备ID</string>
    <string name="bluetooth_detail_device_power">剩余电量</string>
    <string name="bluetooth_detail_device_store_size">剩余空间</string>
    <string name="bluetooth_detail_device_wifi_connect">WIFI网络连接</string>
    <string name="bluetooth_detail_device_upload_status">上传状态</string>
    <string name="bluetooth_detail_device_func">功能设置</string>
    <string name="bluetooth_detail_starttime">开始时间</string>
    <string name="bluetooth_detail_endtime">结束时间</string>
    <string name="bluetooth_wifi_connected_text">已连接</string>
    <string name="bluetooth_wifi_not_connected_text">未连接</string>
    <string name="bluetooth_device_uploaded">已上传</string>
    <string name="bluetooth_device_not_uploaded">未上传</string>
    <string name="bluetooth_detail_back_notice_message">点击返回后,若处于录制状态依然会保持录制</string>
    <string name="bluetooth_detail_start_video">开始录像</string>
    <string name="bluetooth_detail_end_video">结束录像</string>
    <string name="wifi_list_info_text">可用WIFI列表</string>
    <string name="wifi_connect_title">WIFI网络连接</string>
    <string name="survey_main_title">现场查勘端</string>
    <string name="reportinfo_reportid">报案号</string>
    <string name="reportinfo_time">报案时间</string>
    <string name="reportinfo_address">事故地点</string>
    <string name="reportinfo_remark">事故经过</string>
    <string name="reportinfo_carnumber">车牌号</string>
    <string name="reportinfo_name">被保险人</string>
    <string name="reportinfo_connect_text">"点我去连接>"</string>
    <string name="reportinfo_not_connect_status_text">记录仪未连接!</string>
    <string name="reportinfo_connect_status_text">记录仪连接成功!</string>
    <string name="wait_message">敬请期待</string>
    <string name="settings_video_device">服务记录仪</string>
    <string name="device_connected_text">已连接</string>
    <string name="device_not_connected_text">未连接</string>
    <string name="bluetooth_device_settings_title">记录仪设置</string>
    <string name="bluetooth_device_settings_auto_upload_text">充电时自动上传</string>
    <string name="video_list_title">录像列表</string>
    <string name="report_sheet">车险理赔E端</string>
    <string name="start_check">发起查勘</string>
    <string name="exit_application">再按一次返回退出程序</string>
    <string name="tip">提示</string>
    <string name="add_survey">发起查勘</string>
    <string name="start_estimate">发起估损</string>
    <string name="end_txt">确认取证完成并提交结果？</string>
    <string name="submit">提交</string>
    <string name="title_edit_report">报案号*</string>
    <string name="title_edit_car">"标的车牌号 "</string>
    <string name="title_edit_input_report">"报 案 号 "</string>
    <string name="title_edit_phone">"手 机 号 "</string>
    <string name="title_edit_tasktype">任务类型</string>
    <string name="title_edit_tasktype_video_text">案件类型</string>
    <string name="title_edit_tasktype_video_l">大案</string>
    <string name="title_edit_tasktype_video_s">小案</string>
    <string name="title_err_report">请输入报案号</string>
    <string name="tasktype_dingsun_text">定损</string>
    <string name="tasktype_dingsun_text_show">"定损  "</string>
    <string name="tasktype_danzheng_text">单证收集</string>
    <string name="title_err_car">请输入车牌号</string>
    <string name="title_carnumber_not_match_error">"车牌号和报案号不匹配\n请核对输入的车牌号或报案号正确!"</string>
    <string name="title_notice_message">请输入任一项</string>
    <string name="hint">为保证照片质量，请翻转手机，横屏拍照！</string>
    <string name="loading_login">正在登录...</string>
    <string name="tip_input_account">请输入账号</string>
    <string name="tip_input_password">请输入密码</string>
    <string name="login_fail">登录失败，请重新登录</string>
    <string name="request_fail">获取列表失败</string>
    <string name="survey_carnumber_report_no_empty">输入的车牌号和报案号不能同时为空</string>
    <string name="status_untreated">未完成</string>
    <string name="status_tbc">待审核</string>
    <string name="status_checked">已定损</string>
    <string name="status_offline">转线下</string>
    <string name="status_evidenced">已取证</string>
    <string name="status_received">已接收</string>
    <string name="login_err">工号或者密码错误</string>
    <string name="report_checked">定损已完成</string>
    <string name="no_survey">暂无报案单</string>
    <string name="no_service_online">当前没有定损员在线，请咨询95518</string>
    <string name="match_father_id_text">请匹配母账号！</string>
    <string name="matched_father_text">母账号</string>
    <string name="no_service">没有找到对应的报案单</string>
    <string name="network_err">当前网络不可用，请检查您的网络</string>
    <string name="data_err_reload">连接超时\n是否重新加载</string>
    <string name="seesion_end">会话结束</string>
    <string name="disagreen">不同意</string>
    <string name="termaintedMsg_1">对方无法连接</string>
    <string name="termaintedMsg_2">对方已挂断</string>
    <string name="termaintedMsg_3">用户已挂断</string>
    <string name="termaintedMsg_4">无法接听</string>
    <string name="termaintedMsg_5">对方不在线</string>
    <string name="termaintedMsg_6">运营商暂不支持该功能</string>
    <string name="termaintedMsg_7">对方已挂断</string>
    <string name="termaintedMsg_8">通讯已挂断</string>
    <string name="termaintedMsg_9">通讯已挂断</string>
    <string name="termaintedMsg_10">视频已挂断</string>
    <string name="network_show_toast">当前网络不可用，请检查您的网络</string>
    <string name="app_update">版本更新</string>
    <string name="update_file_size">%1$sM / %2$sM</string>
    <string name="toast_1">排队中\n客服马上为您服务</string>
    <string name="report_toast_1">视频过程中请按照定损员指引拍照\n请允许地理位置、摄像头和麦克风权限</string>
    <string name="screenshot_fail">拍照失败，请重试</string>
    <string name="feed_start">开始反馈</string>
    <string name="feed_success">反馈成功</string>
    <string name="feed_fail">反馈失败</string>
    <string name="version_name">当前版本：</string>
    <string name="cancle_requesr">是否取消当前排队</string>
    <string name="exit_current_user">退出</string>
    <string name="title_txt_search">搜索</string>
    <string name="force_logout_txt">您已被迫下线</string>
    <string name="feed_back">意见反馈</string>
    <string name="report_pic">照片上传</string>
    <string name="report_survey">现场查勘</string>
    <string name="enter_survey">进入查勘</string>
    <string name="finish_survey">查勘完成</string>
    <string name="report_gusun">发起估损</string>
    <string name="report_query">案件查询</string>
    <string name="report_video">视频查勘</string>
    <string name="headset">建议佩戴耳机</string>
    <string name="timetamp">时间：</string>
    <string name="b">B端：</string>
    <string name="agent_name">坐席：</string>
    <string name="location_info">地址：</string>
    <string name="jizhi_name">机构：</string>
    <string name="photo">照片</string>
    <string name="edit">编辑</string>
    <string name="edit_car_number">输入车牌号</string>
    <string name="video_report">视频定损</string>
    <string name="image_report">照片上传</string>
    <string name="locationInfo_err">暂未获取到当前地址信息</string>
    <string name="give_up_takephoto">确定放弃本次照片认证</string>
    <string name="refuese_toast">添加车辆请求被拒绝，请协调后重试</string>
    <string name="i_see">知道了</string>
    <string name="add_photo_finsh">确认照片已拍摄完成</string>
    <string name="back_main">确定</string>
    <string name="ocr_err">抱歉未能识别该车牌号</string>
    <string name="ocr_btn_input_text">手动输入</string>
    <string name="ocr_btn_start_text">照片识别</string>
    <string name="upload_success">上传成功!</string>
    <string name="upload_fail">上传失败!</string>
    <string name="upload_waiting">等待中...</string>
    <string name="upload_empty">暂无上传信息</string>
    <string name="upload_finish">图片已上传完成</string>
    <string name="upload_uploading">上传中...</string>
    <string name="cloudphoto_empty">云相册没有照片</string>
    <string name="localphoto_empty">缓存相册没有照片</string>
    <string name="search_hint_carnumber">请输入车牌号</string>
    <string name="search_hint_bindid">"请输入母账号/姓名"</string>
    <string name="search_nodata">抱歉，未搜索到相关结果!</string>
    <string name="search_binduser_choose_text">请选择母账号关联</string>
    <string name="search_binduser_nodata">抱歉，未查询到该母账号!</string>
    <string name="search_default">输入车牌号可搜索以前的工单任务</string>
    <string name="title_taskdetail">任务详情</string>
    <string name="flow_taskdetail">流转记录</string>
    <string name="dingsun_taskdetail">定损信息</string>
    <string name="title_photouploadlist">上传列表</string>
    <string name="loading_dingsun_info">"正在发起定损...."</string>
    <string name="taskdetail_compoent_text">换件信息</string>
    <string name="taskdetail_manhour_text">工时信息</string>
    <string name="taskdetail_material_text">其他辅料</string>
    <string name="taskdetail_loss_download_text">定损单下载</string>
    <string name="loading_loss_info">信息加载中...</string>
    <string name="taskinfoconfirm_title">出险信息</string>
    <string name="taskinfo_survey_signed_pics_nofinished">"该工单尚未确认完成"</string>
    <string name="carinfor_title_survey">现场查勘</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="amendpwd">修改密码</string>
    <string name="exit_title">退出账号</string>
</resources>