<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#99000000"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_25"
            />
        
        <LinearLayout
            android:id="@+id/dialog_submit"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="@drawable/btn_bg_orange">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:text="@string/submit"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_calcle"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:background="@drawable/btn_bg_stroke_orange">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:text="@string/cancel"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>