<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="200dp"
            android:layout_height="140dp"
            android:background="@drawable/hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:text="@string/hint"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_18" />

        <LinearLayout
            android:id="@+id/dialog_submit"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_bg_orange"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/rightContent"
        android:layout_width="@dimen/dimen_56dp"
        android:layout_height="@dimen/dimen_25dp"
        android:layout_marginLeft="@dimen/dimen_15dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:background="@drawable/dialog_selector_left"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_18sp" />
</RelativeLayout>