<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <TextView
        android:id="@+id/login_logo_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/login_logo"
        android:textSize="@dimen/dimen_28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_logo_id"
        android:layout_marginTop="@dimen/dimen_60dp"
        android:layout_margin="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user_account" />

            <EditText
                android:id="@+id/etAccount"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/hint_input_account"
                android:inputType="text"
                android:maxLength="16"
                android:textColor="#333333"
                android:textColorHint="@color/color_hint"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/color_devide_line" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18sp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user_pwd" />

            <EditText
                android:id="@+id/etPassWord"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/hint_input_pwd"
                android:inputType="textPassword"
                android:maxLength="16"

                android:textColor="#333333"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/color_devide_line" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_bg_blue"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_register_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/no_color"
            android:gravity="center_vertical|right"
            android:textColor="@color/color_blue"
            android:text="@string/no_id_should_register"/>
    </LinearLayout>

</RelativeLayout>