<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="#292929"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:gravity="center"
        android:textColor="@color/color_333333"
        android:textSize="12sp"
      />

    <TextView
        android:id="@+id/divider1"
        style="@style/divider_horizontal"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/leftContent"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/dialog_selector"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/i_see"
            android:textColor="@color/color_007aff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/rightContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_selector_left"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="#333333"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/divider"
            style="@style/divider_vertical"
            android:visibility="gone" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_selector_right"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ok"
            android:textColor="@color/red"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>